# etl-wip

./: .gitignore  DataLocality2.ipynb  DataLocalityTest.ipynb  ETL.ipynb  README.md  benchmarking.ipynb  cloudlab.pem  coco.py  init.sh  kube_coco.ipynb  requirements.txt  setup.py  setup.sh  utilities.py
benchmark_scripts/: logger_w0.sh  logger_w1.sh  logger_w2.sh  logger_w3.sh  logger_w4.sh  logger_w5.sh  logger_w6.sh  logger_w7.sh
benchmarking/: report_3_workers.html  report_3_workers_old.html  results_setup.xlsx  timings.csv
cerebro/: constants.py  dask_backend.py  dataset_info.py  etl.py  params.py  setup.cfg
cerebro-etl/: constants.py  dask_backend.py  etl.py  params.py
install/: init.sh  kubernetes_install.sh  kubernetes_join.sh  kubernetes_pre.sh  path.sh  save_space.sh  setup.sh  utilities.py  utilities.sh  values.yaml
install/controller/app/: Dockerfile  run_jupyter.sh
install/controller/config/: controller-deployment.yaml  controller-pv.yaml  controller-pvc.yaml  controller-rolebinding.yaml  controller-service.yaml
install/init_cluster/: kubernetes_install.sh  kubernetes_post.sh  kubernetes_pre.sh
install/nfs-config/: nfs-pv.yaml  nfs-pvc.yaml  nfs-rc.yaml  nfs-svc.yaml
install/other-configs/: kube-config.yaml  rbac_clusterroles.yaml
notebooks/: DataLocality2.ipynb  DataLocality3.ipynb  DataLocalityTest.ipynb  benchmarking.ipynb  cloudlab.pem  coco_mop.ipynb  pytorch_testing.ipynb
old/: DataLocality_WIP.ipynb  fabric_test.ipynb  metadata.csv  pull_files.py  testing.ipynb  testing_dask_etl.ipynb
properties/: cerebro-properties.json
(+5 files in other folders)
