[metadata]
name = cerebro
version = 0.0.1
author = adalabs
author_email = prsridha@ucsd.edu
description = Cerebro package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prsridha/etl-wip
project_urls =
    Bug Tracker = https://github.com/prsridha/etl-wip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .